force-app/main/default/objects/Survey_Theme__c/Survey_Theme__c.object-meta.xml
<CustomObject>
    <description
  >Aesthetic configuration of the survey experience: color tokens, font, layout flags and logo (as a linked File). Referenced by Survey__c.Theme__c so one theme can be reused across surveys. Frame texts live on Survey__c, not here. Replaces the legacy static-resource JSON themes.</description>
    <label>Survey Theme</label>
    <nameField>
        <label>Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>