force-app/main/default/objects/Survey_Theme__c/fields/Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Color__c</fullName>
    <description
  >Page background behind the survey card (token: --survey-bg). Hex format (#RRGGBB), enforced by a validation rule. Mapped to a CSS custom property on the runner host.</description>
    <label>Background Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>