force-app/main/default/objects/Survey_Theme__c/fields/Border_Radius__c.field-meta.xml
<CustomField>
    <fullName>Border_Radius__c</fullName>
    <description
  >Corner radius in pixels applied to the survey card, inputs and buttons (token: --survey-radius). Empty = component default.</description>
    <label>Border Radius (px)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>