force-app/main/default/objects/Survey_Theme__c/fields/Error_Color__c.field-meta.xml
<CustomField>
    <fullName>Error_Color__c</fullName>
    <description
  >Color of validation error messages (token: --survey-error). Hex format (#RRGGBB), enforced by a validation rule. Mapped to a CSS custom property on the runner host.</description>
    <label>Error Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>