force-app/main/default/objects/Survey_Theme__c/fields/Font_Family__c.field-meta.xml
<CustomField>
    <fullName>Font_Family__c</fullName>
    <description
  >CSS font-family stack for the survey (token: --survey-font), e.g. 'Georgia', serif. Empty = component default.</description>
    <label>Font Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>