force-app/main/default/objects/Survey_Theme__c/fields/Logo_Height__c.field-meta.xml
<CustomField>
    <fullName>Logo_Height__c</fullName>
    <description
  >Logo height in pixels in the runner header (token: --survey-logo-height). Width scales automatically to preserve the image's aspect ratio. Empty = component default (60px).</description>
    <label>Logo Height (px)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>