force-app/main/default/objects/Survey_Theme__c/fields/Muted_Color__c.field-meta.xml
<CustomField>
    <fullName>Muted_Color__c</fullName>
    <description
  >Secondary/dimmed text color (token: --survey-muted). Hex format (#RRGGBB), enforced by a validation rule. Mapped to a CSS custom property on the runner host.</description>
    <label>Muted Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>