force-app/main/default/objects/Survey_Theme__c/fields/Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Primary_Color__c</fullName>
    <description
  >Accent color for buttons, progress bar and interactive elements (token: --survey-primary). Hex format (#RRGGBB), enforced by a validation rule. Mapped to a CSS custom property on the runner host.</description>
    <label>Primary Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>