force-app/main/default/objects/Survey_Theme__c/fields/Show_Progress_Bar__c.field-meta.xml
<CustomField>
    <fullName>Show_Progress_Bar__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Whether the runner shows the progress bar for surveys using this theme.</description>
    <label>Show Progress Bar</label>
    <type>Checkbox</type>
</CustomField>