force-app/main/default/objects/Survey_Theme__c/fields/Surface_Color__c.field-meta.xml
<CustomField>
    <fullName>Surface_Color__c</fullName>
    <description
  >Background of the survey card itself (token: --survey-surface). Hex format (#RRGGBB), enforced by a validation rule. Mapped to a CSS custom property on the runner host.</description>
    <label>Surface Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>