force-app/main/default/objects/Survey_Theme__c/fields/Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Text_Color__c</fullName>
    <description
  >Main text color (token: --survey-text). Hex format (#RRGGBB), enforced by a validation rule. Mapped to a CSS custom property on the runner host.</description>
    <label>Text Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>