force-app/main/default/objects/Survey_Theme__c/validationRules/Primary_Color_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Color_Format</fullName>
    <active>true</active>
    <description>Primary Color must be a hex color like #A1B2C3.</description>
    <errorConditionFormula
  >AND(NOT(ISBLANK(Primary_Color__c)), NOT(REGEX(Primary_Color__c, "#[0-9A-Fa-f]{6}")))</errorConditionFormula>
    <errorDisplayField>Primary_Color__c</errorDisplayField>
    <errorMessage
  >Inserire un colore esadecimale nel formato #RRGGBB (es. #0070D2).</errorMessage>
</ValidationRule>